--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "TextCrypt Pro",
+  "name": "TextCrypt",
   "short_name": "TextCrypt",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#f0f0f0",
-  "theme_color": "#007bff",
+  "background_color": "#121212",
+  "theme_color": "#121212",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
